# clinicalnotes-databasing-validated

./: .gitignore  LICENSE  README.md  extract_tabular.sh  pyproject.toml  report_schema.json  standardize_meds.sh
notebooks/: 00 - Demographics.ipynb  01 - Reports_EDA.ipynb  02 - comparison_cognitive_scores.ipynb  anticholinergic_burden.ipynb  pet_prediction.ipynb  rxnorm_example.ipynb  specific_clinical_syndrome.ipynb
src/: extract_tabular.py  json_to_tabular.py  make_nbse_table.py  nbse_report_schema_minimal.py  prompt_templates.py  standardize_meds.py
src/archive/: nbse_report_schema.py  nbse_report_schema_flat.py
