[project]
name = "clinicalnotes-databasing-validated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "altair>=5.5.0",
    "fastexcel>=0.15.1",
    "ipykernel>=6.30.1",
    "json-repair>=0.50.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "ratelimit>=2.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "simplejson>=3.20.1",
    "spacy>=3.8.7",
    "statannotations>=0.7.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "vl-convert-python>=1.8.0",
    "vllm>=0.10.1.1",
    "xlsxwriter>=3.2.5",
]

[tool.uv]
cache-dir = "/projectnb/vkolagrp/bellitti/.cache/uv"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
